--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13"
   },
